add CSS style to the website

--- a/recipes/tuna-noodle-casserole.html
+++ b/recipes/tuna-noodle-casserole.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Tuna Noodle Casserole</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Tuna Noodle Casserole</h1>
