--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <Title>Odin Recipes</Title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
