--- a/recipes/fettuccine-carbonara.html
+++ b/recipes/fettuccine-carbonara.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Fettuccine Carbonara</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Fettuccine Carbonara</h1>
