--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Moussaka</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Moussaka</h1>
