--- a/recipes/tater-tot-hotdish.html
+++ b/recipes/tater-tot-hotdish.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Tater Tot Hotdish</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Tater Tot Hotdish</h1>
